--- a/styles/global.css
+++ b/styles/global.css
@@ -12,5 +12,20 @@
   --shape-transparency:  rgba(255, 255, 255, 0.56);
   --text-color-primary: #313131;
   --text-color-secundary: #6C6C6C;
-  
+
+  --font-family: "Poppins", sans-serif;
+  --text-lg: bold 32px/125% var(--font-family);
+  --text-md: 14px/170% var(--font-family);
+  --text: 16px/150% var(--font-family);
+  --text-sm: 12px/170% var(--font-family);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: var(--brand-color);
 }
