--- a/styles/global.css
+++ b/styles/global.css
@@ -29,3 +29,9 @@ a:hover {
   text-decoration: underline;
   color: var(--brand-color);
 }
+
+.container {
+  padding-inline: 32px;
+  max-width: 1280px;
+  margin-inline: auto;
+}
