--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,8 +1,8 @@
 nav{
   display: flex;
+  align-items: center;
   justify-content: space-between;
-
-  
+  line-height: 0;
   padding-block: 20px;
 }
 
@@ -10,10 +10,19 @@ nav ul {
   list-style: none;
   display: flex;
   padding-block: 8px;
-  gap: 20px;
+  gap: 24px;
+  align-items: center;
 }
 
 nav ul li:last-child img {
   width: 40px;
   height: 40px;
+}
+
+.bg-surface-color{
+  background-color: var(--surface-color);
+}
+
+nav a {
+  font: var(--text);
 }
